[gd_scene load_steps=2 format=3 uid="uid://character_selection_001"]

[ext_resource type="Script" path="res://scripts/character_selection_screen.gd" id="1"]

[node name="CharacterSelectionScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.8)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="CenterContainer"]
custom_minimum_size = Vector2(800, 500)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "SELECT YOUR CHARACTER"
horizontal_alignment = 1

[node name="CoinsLabel" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Coins: 0"
horizontal_alignment = 1

[node name="CharacterGrid" type="GridContainer" parent="CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/h_separation = 15
theme_override_constants/v_separation = 15
columns = 3

[node name="InfoPanel" type="PanelContainer" parent="CenterContainer/PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 120)
layout_mode = 2

[node name="VBox" type="VBoxContainer" parent="CenterContainer/PanelContainer/VBoxContainer/InfoPanel"]
layout_mode = 2

[node name="CharacterName" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer/InfoPanel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Select a character"
horizontal_alignment = 1

[node name="Description" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer/InfoPanel/VBox"]
layout_mode = 2
text = "Choose your playstyle"
horizontal_alignment = 1
autowrap_mode = 2

[node name="Stats" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer/InfoPanel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = ""
horizontal_alignment = 1
autowrap_mode = 2

[node name="UnlockInfo" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer/InfoPanel/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.8, 0, 1)
theme_override_font_sizes/font_size = 14
text = ""
horizontal_alignment = 1

[node name="ButtonContainer" type="HBoxContainer" parent="CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="BackButton" type="Button" parent="CenterContainer/PanelContainer/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(120, 40)
layout_mode = 2
text = "Back"

[node name="SelectButton" type="Button" parent="CenterContainer/PanelContainer/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
disabled = true
text = "Start Game"

[connection signal="pressed" from="CenterContainer/PanelContainer/VBoxContainer/ButtonContainer/BackButton" to="." method="_on_back_pressed"]
[connection signal="pressed" from="CenterContainer/PanelContainer/VBoxContainer/ButtonContainer/SelectButton" to="." method="_on_select_pressed"]
